# todesk

./: .gitattributes  .gitignore  README.md
android/: RELEASE_SIGNING.md  build-apk.ps1  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/top/bhzn/todesk/: AndroidRtcManager.java  AppPrefs.java  BhznApp.java  BuildConfig.java  DiagnosticLog.java  FileTransferReceiver.java  FileTransferStore.java  JsonUtil.java  MainActivity.java  PermissionState.java  QualityProfile.java  RemoteInputService.java  RemoteService.java  SecurePrefs.java  SimpleWebSocket.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  status_pill.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
desktop-agent/: MACOS_UNSIGNED.md  MacAgentLauncher.swift  README.md  bhzn_desktop_agent.py  build-macos-app-package.sh  build-macos-signed.sh  build-macos-unsigned-package.py  build-macos-unsigned-package.sh  build-windows.ps1  install-macos.sh  macos-entitlements.plist  requirements.txt  run-macos.sh  run-windows.ps1  run_payload_macos.py  test-rtc-agent.py  uninstall-macos.sh
desktop-agent-rs/: Cargo.toml  README.md  build-windows.ps1
desktop-agent-rs/docs/: CLEAN_ROOM.md
desktop-agent-rs/src/: capture.rs  config.rs  file_transfer.rs  gui.rs  input.rs  installer.rs  log.rs  main.rs  protocol.rs  rtc.rs  secure.rs  update.rs
docs/: rtc-client-implementation.md  rtc-cost-security-plan.md  rtc-quality-link-monitoring.md  server-git-deploy.md
scripts/: deploy-server-git.sh
server/: package-lock.json  package.json  test-file-transfer.js  test-rtc-signaling.js  test-ws.js  test-ws.tmp.js
server/public/: app.js  cms.html  cms.js  index.html  styles.css
server/src/: server.js
