[package]
name = "bhzn-todesk-agent-rs"
version = "0.2.3"
edition = "2021"
license = "Proprietary"
publish = false

[dependencies]
anyhow = "1"
directories = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
