[package]
name = "bhzn-todesk-agent-rs"
version = "0.2.10"
edition = "2021"
license = "Proprietary"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
directories = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sanitize-filename = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webrtc = "0.8"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security_Cryptography",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
